# Lexyn

./: LICENSE  Lexyn.cabal  README.rst
app/: Main.hs
src/: Ast.hs  Error.hs  Stack.hs  SyntaxChecker.hs  Tokenizer.hs
test/: Spec.hs
