name:                Lexyn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KPI-FICT-IP32/PZKS
license:             BSD3
license-file:        LICENSE
author:              Oleksandr Kovalchuk
maintainer:          anxolerd@outlook.com
copyright:           2017 Oleksandr Kovalchuk
category:            Compilers
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tokenizer
                     , SyntaxChecker
                     , Error
                     , Stack
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Lexyn
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Lexyn
  default-language:    Haskell2010

test-suite lab01-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Lexyn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KPI-FICT-IP32/PZKS
